--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       topics: test-git-assurance
       terraform_dependency_validation: enabled
     secrets:
-      token: ${{ secrets.token }}
+      token: ${{ secrets.CICD_REPO_SCOPE }}
 
   # TODO: add scanning code
 
@@ -24,7 +24,7 @@ jobs:
     steps:   
       - name: Undo Test Scanning Terraform modules in repositories
         env:
-          GH_TOKEN: ${{ secrets.token }}
+          GH_TOKEN: ${{ secrets.CICD_REPO_SCOPE }}
         run: |-
               gh api --method DELETE -H "Accept: application/vnd.github+json" repos/OneCloudAutomation/git-assurance-test/git/refs/heads/onecloudatomation-dependabot-autoremediation
 
