--- a/.github/workflows/codeScanningTerraformModules.yml
+++ b/.github/workflows/codeScanningTerraformModules.yml
@@ -22,7 +22,7 @@ on:
         required: true
 jobs:
   code_scan:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout action repository
         uses: actions/checkout@v3
@@ -40,9 +40,9 @@ jobs:
         if: steps.check-gh.outputs.gh_exist == 'false'
         run: |
           # Install gh cli
-          curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
-          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
-          sudo apt update && sudo apt install gh
+          curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
+          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | tee /etc/apt/sources.list.d/github-cli.list > /dev/null
+          apt update && apt install gh
       - name: login to github cli
         env:
           GITHUB_TOKEN: ${{ secrets.token }}  
